tests/ui/macros/issue-118786.stderr
error: expected identifier, found `(`
  --> $DIR/issue-118786.rs:7:22
   |
LL |         macro_rules! $macro_name {
   |                      ^^^^^^^^^^^ expected identifier
   |
help: try removing the parenthesis around the name for this `macro_rules!`
   |
LL |         macro_rules! meow {
   |                      ~~~~

error: aborting due to 1 previous error

